# ipython

./: .bzrignore  .checkeol  .dockerignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgignore  .mailmap  .meeseeksdev.yml  .pre-commit-config.yaml  .pypirc.enc  .readthedocs.yaml  .travis.yml  ATM machine (need help)  CONTRIBUTING.md  COPYING.rst  COPYING.txt  CSIRO BSD MIT License v2.0.txt  ChangeLog  CoffeeScriptMagic.ipynb  DefaultCellMagic.ipynb  Dockerfile  Equilateral Triangle with Stars.py  LICENSE  MANIFEST.in  Only here for pull request  PaperJS.ipynb  Pmode.ipynb  README  README.rst  README.txt  README_Windows.txt  SECURITY.md  SlideShowMode.ipynb  Test.ipynb  Untitled0.ipynb  Untitled1.ipynb  (+56 more)
.codeboarding/: Command & Extension Framework.md  Error Handling & Debugging.md  Execution & Input Pipeline.md  External Integrations.md  IPython Core.md  Interactive Features (Completion & Inspection).md  Output & Display System.md  Session & Environment Management.md  Terminal Frontend.md  Utility Services.md  on_boarding.md
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml  zizmor.yml
.travis/: nightly.sh
IPython/: ColorANSI.py  ConfigLoader.py  CrashHandler.py  DPyGetOpt.py  Debugger.py  FakeModule.py  FlexCompleter.py  Gnuplot2.py  GnuplotInteractive.py  GnuplotRuntime.py  Itpl.py  Logger.py  Magic.py  OInspect.py  OutputTrap.py  Prompts.py  PyColorize.py  Release.py  Shell.py  Struct.py  __init__.py  __main__.py  background_jobs.py  completer.py  config.py  conftest.py  consoleapp.py  deep_reload.py  demo.py  demoExercizer.py  display.py  dtutils.py  excolors.py  frontend.py  generics.py  genutils.py  git_commit_info.ini  history.py  hooks.py  html.py  (+30 more)
api/: exceptions.py  exporter.py
converters/: __init__.py  base.py  bloggerhtml.py  config.py  html.py  jinja_filters.py  latex.py  latex_transformer.py  lexers.py  markdown.py  notebook.py  pdf.py  python.py  reveal.py  rst.py  slider.py  sphinx_transformer.py  template.py  transformers.py  utils.py
css/: ipython.css  login.css  renderedhtml.css  reveal_html.css
dateformat/: date.format.js
debian/: changelog  control  copyright  install  ipython.doc-base  manpages  postinst  rules  watch
doc/: COPYING  ChangeLog  README.txt  README_Windows.txt  api_changes  build_doc_instruction.txt  do_sphinx.py  ipnb_google_soc.lyx  ipython.1  ipython.el  manual_base.lyx  nbexample.py  nbexample_latex.py  nbexample_output.py  new_design.lyx  pycolor.1  update_magic.sh  update_manual.py  update_version.sh
docs/: ChangeLog  Makefile  README.rst  README_Windows.txt  autogen_api.py  autogen_config.py  autogen_magics.py  autogen_shortcuts.py  conf.json  conf.py  do_sphinx.py  environment.yml  gh-pages.py  jsdoc_config.json  jsdoc_plugin.js  make.cmd  modernization_triage_2026-07.md  requirements.txt  singleton-context-design.md  update_ghpages.sh  update_version.sh
examples/: Dockerfile  Index.ipynb  README.md  auto_suggest_llm.py
filters/: markdown.py
git-hooks/: README.md  install-hooks.sh  post-checkout  post-merge
ipython/: __main__.py
ipython_genutils/: py3compat.py  text.py
ipython_kernel/: __init__.py  __main__.py  connect.py  datapub.py  displayhook.py  eventloops.py  heartbeat.py  iostream.py  ipkernel.py  kernelapp.py  kernelbase.py  kernelspec.py  launcher.py  parentpoller.py  pickleutil.py  serialize.py  session.py  zmqshell.py
ipython_parallel/: __init__.py  cluster.py  error.py  factory.py  logger.py  util.py
js/: clusterlist.js  initmathjax.js  loginmain.js  loginwidget.js  notebook.js  notebookmain.js  notes.js  notificationwidget.js  revealmathjax.js  worksheet.js
jupyter_client/: __init__.py  adapter.py  channelsabc.py  client.py  clientabc.py  connect.py  consoleapp.py  kernelspec.py  kernelspecapp.py  launcher.py  localinterfaces.py  manager.py  managerabc.py  multikernelmanager.py  restarter.py  session.py  threaded.py  win_interrupt.py
jupyter_console/: __main__.py  app.py  completer.py  interactiveshell.py
jupyter_nbconvert/: __init__.py  __main__.py  nbconvertapp.py
jupyter_nbformat/: __init__.py  converter.py  notebooknode.py  reader.py  sign.py  validator.py
jupyter_notebook/: README.md  __main__.py  allow76.py  notebookapp.py  utils.py
jupyter_qtconsole/: base_frontend_mixin.py  client.py  svg.py
nbconvert/: __init__.py  export.py
nbconvert1/: custom_converter.py  dollarmath.py  nbconvert.py  nbstripout.py  notebook_sphinxext.py  preamble.tex
notes/: notes.html  notes.js
pagedown/: LICENSE.txt
prettify/: prettify.css
profile/: base_html.nbcv  blogger_html.nbcv  blogger_html.py  full_html.nbcv  full_html.py  latex_base.nbcv  latex_base.py  latex_sphinx.nbcv  latex_sphinx_base.nbcv  latex_sphinx_howto.nbcv  latex_sphinx_manual.nbcv  latex_sphinx_manual.py  markdown.nbcv  markdown.py  python.nbcv  reveal.nbcv  reveal.py  rst.nbcv
rst2ipynblib/: __init__.py
sandbox/: asynparallel.py  config.py  minitraits.py  test_config.py  traitlets.py
scripts/: iptest  ipython  ipython-wx  ipython_win_post_install.py  ipythonx  irunner  pycolor
setupext/: __init__.py  install_data_ext.py  setupext.py
templates/: Makefile  basic.tpl  basichtml.tpl  display_priority.tpl  fullhtml.tpl  notes.html  notes_base.html  notes_base.js  null.tpl  python-armor.tpl  python.tpl  reveal.tpl  reveal_base.html  rst.tpl  subslides.tpl
test/: manualtest_repr_tb.py  runtests.py  test_autocall.ipy  test_cd.ipy  test_completer.py  test_cpaste.ipy  test_embed.py  test_handlers.py  test_ihist.ipy  test_ipapi.py  test_irunner.py  test_prefilter.py  test_shell_options.py  test_shouldfail.ipy  test_wildcard.py
tests/: bad_all.py  conftest.py  cve.py  fake_llm.py  refbug.py  simpleerr.py  tclass.py  test.ipynb  test_alias.py  test_application.py  test_async_helpers.py  test_autocall.py  test_backgroundjobs.py  test_capture.py  test_clipboard.py  test_compilerop.py  test_completer.py  test_completerlib.py  test_contexts.py  test_crashhandler.py  test_data.py  test_debug_magic.py  test_debugger.py  test_debugger_backport.py  (+94 more)
(+4194 files in other folders)
