[metadata]
name = ipython
version = attr: IPython.core.release.__version__
url = https://ipython.org
description = IPython: Productive Interactive Computing
long_description_content_type = text/x-rst
long_description = file: long_description.rst
license_file = LICENSE
project_urls =
    Documentation = https://ipython.readthedocs.io/
    Funding = https://numfocus.org/
    Source = https://github.com/ipython/ipython
    Tracker = https://github.com/ipython/ipython/issues
keywords = Interactive, Interpreter, Shell, Embedding
platforms = Linux, Mac OSX, Windows
classifiers =
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Shells


[options]
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    setuptools>=18.5
    jedi>=0.16
    decorator
    pickleshare
    traitlets>=5
    prompt_toolkit>=2.0.0,<3.1.0,!=3.0.0,!=3.0.1
    pygments
    backcall
    stack_data
    matplotlib-inline
    pexpect>4.3; sys_platform != "win32"
    appnope; sys_platform == "darwin"
    colorama; sys_platform == "win32"

[options.packages.find]
exclude =
    setupext

[options.package_data]
IPython.core = profile/README*
IPython.core.tests = *.png, *.jpg, daft_extension/*.py
IPython.lib.tests = *.wav
IPython.testing.plugin = *.txt

[options.entry_points]
console_scripts =
    ipython = IPython:start_ipython
    ipython3 = IPython:start_ipython
pygments.lexers =
    ipythonconsole = IPython.lib.lexers:IPythonConsoleLexer
    ipython = IPython.lib.lexers:IPythonLexer
    ipython3 = IPython.lib.lexers:IPython3Lexer

[velin]
ignore_patterns = 
   IPython/core/tests
   IPython/testing

[tool.black]
exclude = 'timing\.py'
