[metadata]
name = ipython
version = attr: IPython.core.release.__version__
url = https://ipython.org
description = IPython: Productive Interactive Computing
long_description_content_type = text/x-rst
long_description = file: long_description.rst
license_file = LICENSE
project_urls =
    Documentation = https://ipython.readthedocs.io/
    Funding = https://numfocus.org/
    Source = https://github.com/ipython/ipython
    Tracker = https://github.com/ipython/ipython/issues
keywords = Interactive, Interpreter, Shell, Embedding
platforms = Linux, Mac OSX, Windows
classifiers =
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Shells

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    appnope; sys_platform == "darwin"
    backcall
    colorama; sys_platform == "win32"
    decorator
    jedi>=0.16
    matplotlib-inline
    pexpect>4.3; sys_platform != "win32"
    pickleshare
    prompt_toolkit>3.0.1,<3.1.0
    pygments>=2.4.0
    setuptools>=18.5
    stack_data
    traitlets>=5

[options.extras_require]
black =
    black
doc =
    Sphinx>=1.3
kernel =
    ipykernel
nbconvert =
    nbconvert
nbformat =
    nbformat
notebook =
    ipywidgets
    notebook
parallel =
    ipyparallel
qtconsole =
    qtconsole
terminal =
test =
    pytest<7.1
    pytest-asyncio
    testpath
test_extra =
    %(test)s
    curio
    matplotlib!=3.2.0
    nbformat
    numpy>=1.19
    pandas
    trio
all =
    %(black)s
    %(doc)s
    %(kernel)s
    %(nbconvert)s
    %(nbformat)s
    %(notebook)s
    %(parallel)s
    %(qtconsole)s
    %(terminal)s
    %(test_extra)s
    %(test)s

[options.packages.find]
exclude =
    setupext

[options.package_data]
IPython.core = profile/README*
IPython.core.tests = *.png, *.jpg, daft_extension/*.py
IPython.lib.tests = *.wav
IPython.testing.plugin = *.txt

[options.entry_points]
console_scripts =
    ipython = IPython:start_ipython
    ipython3 = IPython:start_ipython
pygments.lexers =
    ipythonconsole = IPython.lib.lexers:IPythonConsoleLexer
    ipython = IPython.lib.lexers:IPythonLexer
    ipython3 = IPython.lib.lexers:IPython3Lexer

[velin]
ignore_patterns =
   IPython/core/tests
   IPython/testing

[tool.black]
exclude = 'timing\.py'
